24 Sep 2006 coudercd
 * started simplification and automatization of makefile template's targets.

23 Sep 2006 coudercd
 * removed obsolete command line options of pmkscan.
 * updated pmkscan and scanfile man pages.

22 Sep 2006 coudercd
 * import large chunk of code for better support of shared library.
 * fixed format of c++ suffix in generated makefile.

14 Sep 2006 coudercd
 * fixed CPUID checking for X86 32 bits CPUs, noticed by Leslie Polzer.

05 Sep 2006 coudercd
 * updated values for compiler detection in SETTINGS to sync with pmk.

# snapshot 20060902

01 Sep 2006 coudercd
 * fixed a regression in rev. 102 that prevented from generating a
   complete pmkfile (header and library checks were missing).

17 Aug 2006 coudercd
 * rewritten compiler detection for shared lib support.
 * improved shared lib support verification.

03 Aug 2006 coudercd
 * much mode #defines in compiler detection module.

15 Jul 2006 coudercd
 * a long time since the last commit but had no feeling to work on pmk until
 last days. Here is some cleanup and the latest work done.

# snapshot 20060319

19 Mar 2006 coudercd
 * import latest work on library support (both static and dynamic).

07 Mar 2006 coudercd
 * improved a bit the makefile generation before completing library
   generation support.

01 Mar 2006 coudercd
 * still going on with library handling. Result is still not useable yet
   as library generation targets are missing. That should be the last
   step before completion.

27 Feb 2006 coudercd
 * added hash_extract() to extract data from an hash table.
 * added more serious partial lib support.

05 Feb 2006 coudercd
 * added some experimental stuff into pmkscan to handle libraries
   lately. This stuff could make current unstable as i have not enough
   time to make sure all is fine before commit. I'll notifiy when
   everything will come back to normality.

30 Jan 2006 coudercd
 * pmk now inform when compiler has not been detected before checking